launch Google search if there's nothing to be found in bookmarks or history, as suggested by Bartl'

--- a/earl.html
+++ b/earl.html
@@ -29,7 +29,7 @@
 							if (historyItems[0] != null) {
 								launch(historyItems[0].url);
 							} else {
-								launch("http://" + input);
+								launch("http://www.google.com/search?q=" + input);
 							}
 						});
 					}
